# OSCEAN

./: .gitignore  CMakeLists.txt  GPU条件编译使用指南.md  OSCEAN项目架构图集.md  OSCEAN项目设计评估.md  OSCEAN项目设计评估摘要.md  RAM传播损失可视化输出方案.md  RAM重构设计方案.md  README.md  crs_dataaccess_interface_extension_report.md  cursor_.md  cursor_GDAL优化.md  dxdiag_output.txt  netcdf_coordinate_range_test.cpp  三种功能需求统一设计方案.md  元数据处理优化重构方案.md  元数据提取与处理整合方案.md  基于现有模块的数据工作流逻辑.md  实际数据测试.txt  插值算法统一与GPU优化方案.md  数据处理工作流核心功能设计.md  数据处理工作流设计方案.md  数据工作流高级优化方案.md  数据工作流高级优化方案阶段4.md  智能并行处理策略详细设计.md  空间服务独立性修复完成报告.md  编译指令.txt  输出层设计方案.md
application/: CMakeLists.txt
application/data_workflow_app/: CMakeLists.txt
application/data_workflow_app/include/app/: i_network_runner.h
application/data_workflow_app/src/: main - 副本.cpp  main.cpp
application/src/: main.cpp
core_services_impl/interpolation_service/: CMakeLists.txt
core_services_impl/interpolation_service/include/interpolation/: interpolation_algorithm_factory.h  interpolation_method_mapping.h  layout_converter.h  unified_interpolation_framework.h
core_services_impl/interpolation_service/src/: CMakeLists.txt
core_services_impl/interpolation_service/src/factory/: interpolation_service_factory.cpp  interpolation_service_factory.h
core_services_impl/interpolation_service/src/gpu/: gpu_batch_processing_engine.cpp  gpu_interpolation_engine.cpp  optimized_batch_engine.cpp
core_services_impl/interpolation_service/src/impl/: interpolation_service_impl.cpp  layout_converter.cpp
core_services_impl/interpolation_service/tests/: CMakeLists.txt  test_batch_gpu_optimization.cpp  test_bilinear_simd_performance.cpp  test_complex_field_simd_performance.cpp  test_comprehensive_performance.cpp  test_cpu_vs_gpu_performance.cpp  test_cubic_nearest_simd_performance.cpp  test_gpu_basic_performance.cpp  test_gpu_interpolation_comprehensive.cpp  test_gpu_interpolation_integration.cpp  test_layout_aware_interpolation.cpp  test_linear_trilinear_simd_performance.cpp  test_pchip_2d_bathy_performance.cpp  test_pchip_2d_simd_performance.cpp  test_pchip_3d_complex_simd_performance.cpp  test_pchip_3d_simd_performance.cpp  test_pchip_basic_simd_performance.cpp  test_pchip_gpu_performance.cpp  test_pchip_versions_comparison.cpp  test_performance_comparison.cpp
core_services_impl/interpolation_service/tests/gpu/: test_gpu_interpolation.cpp  test_gpu_interpolation_performance.cpp
core_services_impl/interpolation_service/tests/unit/: test_bilinear_interpolator.cpp  test_interpolation_algorithms.cpp  test_interpolation_performance_benchmark.cpp  test_interpolation_service_integration.cpp
core_services_impl/metadata_service/: CMakeLists.txt
core_services_impl/metadata_service/cmake/: config.cmake.in  metadata_service_config.cmake.in
core_services_impl/metadata_service/config/: database_config.yaml  file_format_mapping.yaml  variable_classification.yaml
core_services_impl/metadata_service/docs/: 实现完成报告.md  重构完成报告.md  重构差异分析报告.md
core_services_impl/metadata_service/include/adapters/: unified_metadata_adapter.h
core_services_impl/metadata_service/include/impl/: configuration_manager.h  crs_processor.h  database_migration_manager.h  dataset_metadata_registry.h  intelligent_recognizer.h  metadata_extractor.h  metadata_service_factory.h  metadata_service_impl.h  query_engine.h  unified_database_manager.h
core_services_impl/metadata_service/src/: configuration_manager.cpp
core_services_impl/metadata_service/src/core/: metadata_service_factory.cpp  metadata_service_impl.cpp  multi_database_manager.cpp  multi_database_manager.h  query_engine.cpp
core_services_impl/metadata_service/src/extractors/: metadata_extractor_interface.h
core_services_impl/metadata_service/src/impl/: database_migration_manager.cpp  dataset_metadata_registry.cpp  intelligent_recognizer.cpp  metadata_extractor.cpp  metadata_standardizer.cpp  metadata_standardizer.h  unified_database_manager.cpp
core_services_impl/metadata_service/src/processing/: metadata_processor.h
core_services_impl/metadata_service/tests/: CMakeLists.txt
core_services_impl/metadata_service/tests/unit/: config_loading_test.cpp  real_config_verification_test.cpp  real_netcdf_metadata_test.cpp
core_services_impl/metadata_service/tests/utils/: CMakeLists.txt  db_inspector.cpp
network_service/: CMakeLists.txt  README.md  网络服务层设计方案.md
network_service/cmake/: config.cmake.in
network_service/include/network_service/: dto.h  http_connection.h  listener.h  network_server.h  request_router.h
network_service/src/: http_connection.cpp  listener.cpp  network_runner_impl.cpp  network_server.cpp  request_router.cpp
output_generation/: AVX512_Performance_Analysis.md  CMakeLists.txt  performance_optimization_report.md
output_generation/include/output_generation/gpu/: gpu_color_mapper.h  gpu_grid_data_helper.h  gpu_tile_generator.h  gpu_tile_generator_wrapper.h  gpu_tile_types.h  gpu_visualization_engine.h
output_generation/src/: output_service_factory.cpp  output_service_factory.h  output_service_impl.cpp  output_service_impl.h
output_generation/src/engines/: data_export_engine.cpp  data_export_engine.h  font_renderer.cpp  font_renderer.h  in_memory_data_reader.cpp  in_memory_data_reader.h  visualization_engine.cpp  visualization_engine.h
output_generation/src/engines/gpu/: color_maps.h  gpu_batch_color_mapper.cpp  gpu_color_mapper.cpp  (+5 more)
output_generation/src/profiles/: output_profile_manager.cpp  output_profile_manager.h
output_generation/src/writers/: gdal_raster_writer.cpp  gdal_raster_writer.h  gdal_vector_writer.cpp  gdal_vector_writer.h  i_writer.h  netcdf_writer.cpp
workflow_engine/data_workflow/: CMakeLists.txt  test_simple_workflow.cpp
workflow_engine/data_workflow/src/: data_workflow_service_impl.cpp  enhanced_data_workflow_service_impl.cpp  enhanced_spatial_request_resolver.cpp
workflow_engine/data_workflow/tests/: CMakeLists.txt
workflow_engine/tests/: CMakeLists.txt  README.md  test_ice_thickness_workflow_stage1.cpp  test_ice_thickness_workflow_stage1_fixed.cpp  test_service_manager_production.cpp
(+546 files in other folders)
